--- a/src/index.css
+++ b/src/index.css
@@ -108,10 +108,11 @@ p {
 }
 @media screen and (min-width: 800px) {
 	h1 {
-		font-size: 4rem;
+		font-size: 3.5rem;
 	}
 	h2 {
 		font-size: 2.5rem;
+		color: var(--clr-grey-1);
 	}
 	h3 {
 		font-size: 1.75rem;
@@ -161,7 +162,7 @@ Menu
 .underline {
 	width: 15rem;
 	height: 0.25rem;
-	background: #2c2891;
+	background: var(--clr-primary-3);
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -173,6 +174,7 @@ Menu
 .filter-btn {
 	background: transparent;
 	border-color: transparent;
+	color: var(--clr-grey-1);
 	font-size: 1.3rem;
 	font-family: "Poppins", sans-serif;
 	font-weight: 700;
@@ -185,7 +187,7 @@ Menu
 	border-radius: var(--radius);
 }
 .filter-btn:hover {
-	background: #3e3c5a;
+	background: var(--clr-primary-6);
 	color: var(--clr-white);
 }
 .section-center {
@@ -224,7 +226,7 @@ Menu
 	margin-bottom: 0.5rem;
 }
 .price {
-	color: #2c2891;
+	color: var(--clr-primary-3);
 }
 .item-text {
 	margin-bottom: 0;
