--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,9 @@ Menu
 	margin-left: auto;
 	margin-right: auto;
 }
+.searchInput{
+	text-align: center;
+}
 .btn-container {
 	margin-bottom: 4rem;
 	display: flex;
